[package]
name = "gunblade"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.4"
reqwest = { version = "0.11.20", features = ["default-tls", "native-tls"] }
sysinfo = "0.29.10"
tokio = { version = "1.32.0", features = ["full"] }
